k8s/api/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adlab-api
  namespace: adlab
  labels:
    app: adlab-api
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adlab-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: adlab-api
        tier: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path:   "/metrics"
        prometheus.io/port:   "3000"
    spec:
      containers:
        - name: adlab-api
          image: ghcr.io/brunooffs/adlab-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: adlab-api
  namespace: adlab
  labels:
    app: adlab-api
spec:
  selector:
    app: adlab-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
